--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,11 +2,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Smoothie App</title>
   <link rel="stylesheet" href="/styles.css">
+  <link rel="icon" href="/favicon.png">
 </head>
 <body>
   <nav>
     <h1><a href="/">Ninja Smoothies</a></h1>
+    <ul>
+      <li><a href="/login">Log in</a></li>
+      <li><a href="/signup" class="btn">Sign up</a></li>
+    </ul>
   </nav>
   
